Add views, edit path for requests

--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -1,5 +1,6 @@
-<h1>teeeeest</h1>
+<h1>index html</h1>
 
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
-
+<script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/requests.js' %}"></script>
