--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -3,12 +3,15 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
 <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/Tone.min.js' %}"></script>
 <!--<script type="text/javascript" src="{% static 'js/requests.js' %}"></script>-->
+
+<script type="text/javascript" src="{% static 'js/binary_transport.js' %}"></script>
+
 <script type="text/javascript" src="{% static 'js/test.js' %}"></script>
 
+
 <script>
-	test.test_requests("hello");
-	test.get_sounds();
-	test.get_projects.a();
+	test.audio_generation_test();
 </script>
 
