Edit server part - edit models: add Stream model, delete/create Projects model methods; - create StreamManager for Stream model; - edit ProjectManager methods; - edit DataManager. Edit client part: - add new requests for test; - create model Track for sound track; - create class for applying ToneJS and generate sound.

--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -12,6 +12,10 @@
 
 
 <script>
-	test.audio_generation_test();
+	// test.test_requests("hello");
+	//test.project_creation();
+	test.project_data();
+	//test.project_deletion();
+	test.projects_data();
 </script>
 
