Edit server part: - edit model managers, file managers, add update method in StreamsManager. Edit client part: - add new test request to merge a few audio track.

--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -12,10 +12,8 @@
 
 
 <script>
-	// test.test_requests("hello");
-	//test.project_creation();
-	test.project_data();
-	//test.project_deletion();
-	test.projects_data();
+	//test.project_data();
+	test.merger();
+	//test.projects_data();
 </script>
 
