Edit project structure of client: - create models for track data; - create utils directory; - create AudioPlayer class for playing or saving tracks; - create test module for uploading sound and handle it with ToneJS.

--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -12,8 +12,9 @@
 
 
 <script>
-	//test.project_data();
-	test.merger();
-	//test.projects_data();
+    //test.test_requests();
+	//test.getProjectData();
+	//test.getProjectsData();
+	test.upload_sound_test();
 </script>
 
