Edit request function

--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -12,9 +12,8 @@
 
 
 <script>
-    //test.test_requests();
-	//test.getProjectData();
+	test.getProjectData("projects/projectttt/", test.audioplayer_test); // test call
 	//test.getProjectsData();
-	test.upload_sound_test();
+	//test.upload_sound_test();
 </script>
 
