--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -1,11 +1,7 @@
 <div class="ui center aligned container">
-    <div class="ui grid">
-        <div class="column">
-            <p>USER</p>
-        </div>
-        <div class="column">
-            <img src="/home/kate/Pictures/index.jpeg">
-        </div>
+    <div class="user-info">
+        <p>USER</p>
+        <button class='ui button join'>join</button>
     </div>
     <div class="project_bar"></div>
     <div class="content">
@@ -28,7 +24,7 @@
 
 <script>
     //test.merger_test();
-    test.projectList();
+    //test.projectList();
 	//test.getProjectData("projects/project0/", test.audioplayer_test); // test call
 	//test.getProjectsData();
 	//test.upload_sound_test();
