Edit project structure - edit request modules; - move factory components in to single module; - create MessageModal class.

--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -1,9 +1,11 @@
+{% load socialaccount %}
+
 <div class="ui center aligned container">
     <div class="user-info">
         <p>USER</p>
-        <button class='ui button join'>join</button>
+        <button class="ui button join">join</button>
     </div>
-    <div class="project_bar"></div>
+    <div class="project-bar"></div>
     <div class="content">
         <div class="track_manager"></div>
     </div>
@@ -23,9 +25,5 @@
 <script type="text/javascript" src="{% static 'js/test.js' %}"></script>
 
 <script>
-    //test.merger_test();
-    //test.projectList();
 	//test.getProjectData("projects/project0/", test.audioplayer_test); // test call
-	//test.getProjectsData();
-	//test.upload_sound_test();
 </script>
