--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -20,7 +20,7 @@ body {
     padding: 1%;
 }
 
-.project_bar {
+.project-bar {
     width: 15%;
     float: left;
     padding: 1%;
@@ -29,4 +29,10 @@ body {
 
 .content {
     padding-top: 2%;
+}
+
+.ui.modal.base-container{
+    width: 300px;
+    height: 200px;
+    padding: 5%;
 }
