Create MenuBar class. Create ProjectBar class. Edir RequestManager method getUser. Delete unnecessary code from index.js.

--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -10,29 +10,34 @@ body {
     background-color: #252525;
 }
 
-.user-info {
+.menubar {
     height: 50px;
     background-color: teal;
 }
 
-.user-info p, .ui.button.join {
+.menubar .ui.button, p {
     float: right;
     padding: 1%;
 }
 
-.project-bar {
+.projectbar {
     width: 15%;
     float: left;
     padding: 1%;
-    background-color: teal;
 }
 
 .content {
     padding-top: 2%;
 }
 
-.ui.modal.base-container{
+.ui.modal.base {
     width: 300px;
     height: 200px;
     padding: 5%;
+}
+
+.ui.modal.base .button {
+    display: block;
+    margin: 0 2% auto;
+    width: auto;
 }
