--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -30,14 +30,18 @@ body {
     padding-top: 2%;
 }
 
-.ui.modal.base {
+.base.ui.modal {
     width: 300px;
     height: 200px;
     padding: 5%;
 }
 
-.ui.modal.base .button {
+.base.ui.modal .button {
     display: block;
     margin: 10% auto;
     width: auto;
+}
+
+.base.project-list {
+    margin: 5% 10%;
 }
