--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -11,7 +11,7 @@
 
 <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/Tone.min.js' %}"></script>
-<!--<script type="text/javascript" src="{% static 'js/requests.js' %}"></script>-->
+<script src="//cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/2.0.5/wavesurfer.min.js"></script>
 <script src="{% static 'semantic/dist/semantic.min.js' %}"></script>
 
 <script type="text/javascript" src="{% static 'js/binary_transport.js' %}"></script>
