--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .menubar {
-    height: 50px;
+    height: 55px;
     background-color: teal;
 }
 
@@ -21,9 +21,21 @@ body {
 }
 
 .projectbar {
-    width: 15%;
     float: left;
-    padding: 1%;
+    margin: 1% auto;
+    width: 20%;
+}
+
+.projectbar .ui.button {
+    margin: 0 0 0 3%;
+    display: block;
+    width: 10%;
+    float: left;
+    padding: 2%;
+}
+
+.projectbar .ui.button i.icon{
+
 }
 
 .content {
@@ -44,4 +56,31 @@ body {
 
 .base.project-list {
     margin: 5% 10%;
+}
+
+.base.track-view {
+    margin: 0 auto;
+    width: 70%;
+}
+
+.base.player {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 55px;
+    background-color: grey;
+}
+
+.player .play-button-container {
+    float: left;
+}
+
+.player .save-button-container {
+    float: right;
+}
+
+.base.track-tool {
+    margin: 5% auto;
+    background-color: white;
+    width: 80%;
 }
