--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-    background-color: #252525;
+    background-color: #262626;
 }
 
 .menubar {
@@ -68,7 +68,7 @@ body {
     bottom: 0;
     width: 100%;
     height: 55px;
-    background-color: grey;
+    background-color: #626262;
 }
 
 .play-button-group {
@@ -79,7 +79,7 @@ body {
     float: right;
 }
 
-.track-tool {
+.track-tool-view {
     margin: 5% auto;
     background-color: white;
     width: 80%;
