Correct back-event and clear methods.

--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -98,8 +98,9 @@ body {
 }
 
 .wave-form {
-    float: right;
     width: 90%;
+    height: 10%;
+    margin-top: 1%;
     background-color: #767676;
 }
 
@@ -137,6 +138,6 @@ body {
     color: white;
 }
 
-.circular.ui.icon.button.add {
+.circular.ui.icon.button.add-track {
     margin-top: 2%;
 }
