--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -141,3 +141,49 @@ body {
 .circular.ui.icon.button.add-track {
     margin-top: 2%;
 }
+
+.piano {
+    width: 100%;
+    position: relative;
+}
+
+.piano .key {
+    position: absolute;
+    border: 1px solid black;
+    border-radius: 0px 0px 5px 5px;
+    box-shadow: 0px 5px 1px rgba(32,32,32,0.2);
+}
+
+.key.white {
+    background-color: #ffffff;
+    z-index: 0;
+    width: 40px;
+    height: 200px;
+}
+
+.key.black {
+    background-color: rgb(32,32,32);
+    color: #ffffff;
+    z-index: 1;
+    width: 30px;
+    height: 120px;
+}
+
+.key-content{
+    position: absolute;
+    bottom: 5px;
+    left: 0px;
+    right: 0px;
+}
+
+.key-content label {
+    text-align: center;
+}
+
+.key-content .note {
+    margin-bottom: 40px;
+}
+
+.key-content .keyboard {
+    margin-top: 10px;
+}
