--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -152,8 +152,12 @@ body {
     border: 1px solid black;
     border-radius: 0px 0px 5px 5px;
     box-shadow: 0px 5px 1px rgba(32,32,32,0.2);
+    background-color: #ffffff;
+    z-index: 0;
+    width: 40px;
+    height: 200px;
 }
-
+/*
 .key.white {
     background-color: #ffffff;
     z-index: 0;
@@ -168,7 +172,7 @@ body {
     width: 30px;
     height: 120px;
 }
-
+*/
 .key-content{
     position: absolute;
     bottom: 5px;
