--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -142,12 +142,12 @@ body {
     margin-top: 2%;
 }
 
-.piano {
+.keys {
     width: 100%;
     position: relative;
 }
 
-.piano .key {
+.keys .key {
     position: absolute;
     border: 1px solid black;
     border-radius: 0px 0px 5px 5px;
