Add record methods for piano.

--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -196,3 +196,23 @@ body {
     position: relative;
     float: right;
 }
+
+.button.record {
+    margin-left: 80%;
+    float: right;
+}
+
+.button.stop-record {
+    margin-left: 80%;
+    float: right;
+}
+
+.button.replay {
+    margin-left: 80%;
+    float: right;
+}
+
+.button.clear {
+    margin-left: 80%;
+    float: right;
+}
