Create oscilltor model and view. Correct ProxyManagerModel.

--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'semantic/dist/semantic.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
 
+<script type="text/javascript" src="{% static 'js/draggabilly.pkgd.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/Tone.min.js' %}"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/2.0.5/wavesurfer.min.js"></script>
@@ -16,6 +17,9 @@
 
 <script type="text/javascript" src="{% static 'js/binary_transport.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/test.js' %}"></script>
+
+<script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
+
 
 <script>
 	//test.getProjectData("projects/project0/", test.audioplayer_test); // test call
