--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -218,3 +218,25 @@ body {
     margin-left: 80%;
     float: right;
 }
+
+.circle-drag {
+    border-radius: 50%;
+}
+
+.draggable {
+    width: 100px;
+    height: 100px;
+    background: #F90;
+}
+.draggable.is-pointer-down {
+    background: #09F;
+}
+.draggable.is-dragging {
+    opacity: 0.7;
+}
+
+.coord-map {
+    width: 100%;
+    height: 50%;
+    background-color: grey;
+}
