--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -15,6 +15,11 @@ body {
     background-color: teal;
 }
 
+.ui.horizontal.list.menu-bar {
+    width: 100%;
+    height: 55px;
+}
+
 .user-info-bar {
     float: left;
     margin-left: 80%;
@@ -117,8 +122,12 @@ body {
     width: 90%;
     height: 10%;
     margin-top: 1%;
-    background-color: #767676;
+    /*background-color: #767676;*/
 }
+
+/*.wave {
+    position: none;
+}*/
 
 .track-data-view {
     width: 70%;
