--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -11,7 +11,7 @@ body {
 /* ------------------------------------------- */
 
 .menubar {
-    height: 55px;
+    height: 60px;
     background-color: teal;
 }
 
@@ -197,37 +197,42 @@ body {
 /* ------------------------------------------- */
 
 .track-view {
-    margin: 0 auto;
-    width: 90%;
+    margin: 3% auto;
+    width: 95%;
+}
+
+.instrument-view {
+
+}
+
+.track-view .tools .column.instrument{
+
 }
 
 .wave-form {
-    width: 90%;
-    height: 10%;
-    margin-top: 1%;
-    /*background-color: #767676;*/
+    width: 100%;
+    height: 150px;
+    margin: 0;
+    background-color: #565e62;
 }
 
 /*.wave {
     position: none;
 }*/
 
-.instrument-view {
-    height: 40%;
-}
 
 /* piano view */
 
 .piano {
-    width: 50%;
-    margin: 0 auto;
-    display: inline-block;
+    margin: 5% 0;
+    height: 70%;
+    float: left;
 }
 
 .keys {
     width: 100%;
     position: relative;
-
+    margin: 0;
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
@@ -282,7 +287,8 @@ body {
 
 .piano .octaves {
     width: 35%;
-    margin: 27% auto;
+    margin: 25% auto;
+    position: absolute;
 }
 
 .piano .octave-label {
@@ -303,22 +309,41 @@ body {
 /* drum view */
 
 .grid.drum {
-    width: 80%;
-    background-color: grey;
+    width: auto;
+    margin: 5% auto;
+    background-color: #565e62;
+}
+
+.instrument-view .ui.grid.drum .column {
+    margin: 2% 0;
+}
+
+.grid.drum img.ui.image {
+    margin: 0 auto;
+}
+
+.grid.drum .column .keys div {
+    float: left;
+    color: white;
+    font-size: 20px;
+    margin: 0 0 0 5%;
 }
 
 /* tool view - tab */
 
-.track-view .tabular.menu {
-    width: 80%;
+/*.track-view .tabular.menu {
     background-color: #f8f8f8;
+}*/
+
+.ui.attached.tabular.menu .item.active{
+    background-color: white;
 }
 
-.ui.attached.tabular.menu {
-    margin-top: 5%;
+.ui.attached.tabular.menu .item{
+    background-color: #ebebeb;
 }
 
-.track-view .ui.grid.setting {
+.track-view .ui.grid.setting .column{
     margin: 1% 0;
 }
 
