--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -211,7 +211,7 @@ body {
 
 .wave-form {
     width: 100%;
-    height: 150px;
+    height: 120px;
     margin: 0;
     background-color: #565e62;
 }
@@ -286,7 +286,7 @@ body {
 }
 
 .piano .octaves {
-    width: 35%;
+    width: auto;
     margin: 25% auto;
     position: absolute;
 }
@@ -311,20 +311,23 @@ body {
 .grid.drum {
     width: auto;
     margin: 5% auto;
-    background-color: #565e62;
 }
 
 .instrument-view .ui.grid.drum .column {
-    margin: 2% 0;
+    margin: 1% 0;
+    background-color: white;
 }
 
 .grid.drum img.ui.image {
     margin: 0 auto;
 }
 
+.grid.drum .column .keys {
+    width: auto;
+}
+
 .grid.drum .column .keys div {
     float: left;
-    color: white;
     font-size: 20px;
     margin: 0 0 0 5%;
 }
@@ -373,6 +376,7 @@ body {
 
 input {
     width: 300px;
+    min-width: 100px;
 }
 
 
