--- a/project/sound_store/templates/index.html
+++ b/project/sound_store/templates/index.html
@@ -21,6 +21,4 @@
 <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
 
 
-<script>
-	//test.getProjectData("projects/project0/", test.audioplayer_test); // test call
-</script>
+<script></script>
