--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -93,13 +93,21 @@ body {
 .ui.modal.user-registration {
     width: 300px;
     height: 200px;
-    padding: 5%;
+}
+
+.buttons-registration {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
 }
 
 .ui.modal.user-registration .button {
-    display: block;
-    margin: 10% auto;
     width: auto;
+    height: 50px;
+    display: block;
+    font-size: 15px;
+    margin: 10% auto;
 }
 
 /* PROJECT LIST VIEW */
