Fix valueOf method for BaseOptionList object. Correct style for user info bar.

--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -7,6 +7,10 @@ body {
     height: 100%;
 }
 
+.window-manager {
+    height: 100%;
+}
+
 /* MENUBAR */
 /* ------------------------------------------- */
 
@@ -49,7 +53,7 @@ body {
 }
 
 .user-info-bar {
-    width: 10%;
+    width: 15%;
     float: right;
 }
 
