--- a/project/sound_store/static/css/style.css
+++ b/project/sound_store/static/css/style.css
@@ -198,6 +198,7 @@ body {
 
 .track-list div[class^='track-']{
     margin: 0 0 2% 0;
+    height: 60px;
 }
 
 .track-list .circular.ui.icon.button.delete {
